syntax = "proto3";

package query;

service QueryReferenceValue {
  rpc query (QueryReq) returns (QueryRes) {}
}

message QueryReq {
  string name = 1;
}

message QueryRes {
  string result = 1;
  optional string reference_value = 2;
}